<resources>
    <string name="app_name">Welcome_KAIST</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addemail">이메일</string>
    <string name="addbutton">주소록 및 앱에 저장</string>
    <string name="addbutton2">뒤로 가기</string>
    <string name="mainbutton1">연락처 추가</string>
    <string name="mainbutton2">연락처 가져오기</string>
    <string name="addphonenumber">전화번호</string>
    <string name="addname">이름</string>
    <string name="adddepartment">학부</string>
    <string name="title_activity_add_phone_book">AddPhoneBook</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alert_dialog_ok">testing</string>
    <string name="title_activity_get_address">GetAddress</string>
    <string name="imagetitle_kor1">건설 및 환경공학과</string>
    <string name="imagetitle_eng1">Civil and Environmental Engineering</string>
    <string name="imagedetail1">건설 및 환경공학이란, 인간의 일상생활 및 생산 활동에 필요한 주거, 산업, 교통 등과 관련된 기반
시설물을 공급하고 인류의 복지향상을 구현하기 위하여 주어진 자연조건과 생활환경을 보호하고
개선하는 한편 이러한 여건들을 가장 효과적으로 이용할 수 있는 방법을 연구하는 학문입니다.
우리 학과에서는 산업사회로의 급속한 발전과 더불어 날로 복잡해지는 생활 및 산업 환경 여건 속에서
관련 건설 및 환경공학 첨단기술의 개발을 위하여 그 일익을 담당하고 있습니다.

우리 학과는 구조공학 및 재료, 지반공학 및 지반 시스템, 환경공학 및 지속성, 건설공학 IT, Planning 및
Design(도시/건축계획 및 설계), 교통 분야에 중점을 두고 있으며 그 외의 분야도 점진적으로 개설하여
나갈 계획에 있습니다.</string>

    <string name="imagetitle_kor2">기계공학과</string>
    <string name="imagetitle_eng2">Mechanical Engineering</string>
    <string name="imagedetail2">기계과 좋아요</string>

    <string name="imagetitle_kor3">기술경영학부</string>
    <string name="imagetitle_eng3">School of Business and Technology Management</string>
    <string name="imagedetail3">기술경영학부 좋아요</string>

    <string name="imagetitle_kor4">바이오및뇌공학과</string>
    <string name="imagetitle_eng4">Bio and Brain Engineering</string>
    <string name="imagedetail4">바뇌과 좋아요</string>

    <string name="imagetitle_kor5">산업디자인학과</string>
    <string name="imagetitle_eng5">Industrial Design</string>
    <string name="imagedetail5">산디과 좋아요</string>

    <string name="imagetitle_kor6">산업및시스템공학과</string>
    <string name="imagetitle_eng6">Industrial and Systems Engineering</string>
    <string name="imagedetail6">산업및시스템공학과 좋아요</string>

    <string name="imagetitle_kor7">생명과학과</string>
    <string name="imagetitle_eng7">Biological Sciences</string>
    <string name="imagedetail7">생명과 좋아요</string>

    <string name="imagetitle_kor8">생명화학공학과</string>
    <string name="imagetitle_eng8">Chemical and Biomolecular Engineering</string>
    <string name="imagedetail8">생화공 좋아요</string>

    <string name="imagetitle_kor9">수리과학과</string>
    <string name="imagetitle_eng9">Mathematical Sciences</string>
    <string name="imagedetail9">수학과 좋아요</string>

    <string name="imagetitle_kor10">신소재공학과</string>
    <string name="imagetitle_eng10">Materials Science and Engineering</string>
    <string name="imagedetail10">신소재 좋아요</string>

    <string name="imagetitle_kor11">원자력및양자공학과</string>
    <string name="imagetitle_eng11">Nuclear and Quantum Engineering</string>
    <string name="imagedetail11">원자력및양자공학과 좋아요</string>

    <string name="imagetitle_kor12">전기및전자공학부</string>
    <string name="imagetitle_eng12">Electrical Engineering</string>
    <string name="imagedetail12">전자과 좋아요</string>

    <string name="imagetitle_kor13">전산학부</string>
    <string name="imagetitle_eng13">School of Computing</string>
    <string name="imagedetail13">전산학과 좋아요</string>

    <string name="imagetitle_kor14">항공우주공학과</string>
    <string name="imagetitle_eng14">Aerospace Engineering</string>
    <string name="imagedetail14">항공우주공학과 좋아요</string>

    <string name="imagetitle_kor15">화학과</string>
    <string name="imagetitle_eng15">Chemistry</string>
    <string name="imagedetail15">화학과 좋아요</string>

    <string-array name = "LAN">
        <item>"연락처 수정"</item>
        <item>"연락처 삭제"</item>
        <item>"전화걸기"</item>
    </string-array>

    <string-array name="my_header_title">
        <item></item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="days">
        <item >Mon</item>
        <item >Tue</item>
        <item >Wed</item>
        <item >Thu</item>
        <item >Fri</item>
    </string-array>
</resources>